--- a/public_html/index.html
+++ b/public_html/index.html
@@ -82,9 +82,9 @@
           <p><strong data-translate="hardware_type">Typ okucia:</strong> <span class="editable-content-main">-</span></p>
           <p><strong data-translate="window_weight">Waga okna:</strong> <span class="editable-content-main">-</span></p>
           <p><strong data-translate="production_date">Data produkcji:</strong> <span class="editable-content-main">-</span></p>
-          <p><strong data-translate="gasket_type">Rodzaj uszczelki:</strong> <span class="editable-content-main">-</span></p>
+          <!-- <p><strong data-translate="gasket_type">Rodzaj uszczelki:</strong> <span class="editable-content-main">-</span></p>
           <p><strong data-translate="glass_thickness">Grubość szkła:</strong> <span class="editable-content-main">-</span></p>
-          <p><strong data-translate="frame_reinforcement">Rodzaj zbrojenia ramy:</strong> <span class="editable-content-main">-</span></p>
+          <p><strong data-translate="frame_reinforcement">Rodzaj zbrojenia ramy:</strong> <span class="editable-content-main">-</span></p> -->
         </div>
       </div>
 
@@ -146,7 +146,7 @@
             <!-- Lista ofert -->
             <h6 class="footer-heading collapsible" data-target="products"><span data-translate="products">OFERTA</span><i class="fa fa-chevron-down arrow-icon"></i></h6>
             <div class="content">
-              <p class="footer-text"><i class="fab fa-windows"></i> <a href="https://gabit.eu/okna/" class="text-white" data-translate="windows"> OKNA</a></p>
+              <p class="footer-text"><i class="fab fa-windows"></i><a href="https://gabit.eu/okna/" class="text-white" data-translate="windows"> OKNA</a></p>
               <p class="footer-text"><i class="fas fa-door-closed"></i><a href="https://gabit.eu/drzwi/" class="text-white" data-translate="doors"> DRZWI</a></p>
               <p class="footer-text"><i class="fas fa-layer-group"></i><a href="https://gabit.eu/systemy-przesuwne/" class="text-white" data-translate="sliding_systems"> PRZESUWNE</a></p>
               <p class="footer-text"><i class="fas fa-window-restore"></i><a href="https://gabit.eu/fasady/" class="text-white" data-translate="facades"> FASADY</a></p>
