--- a/public_html/index.html
+++ b/public_html/index.html
@@ -82,9 +82,6 @@
           <p><strong data-translate="hardware_type">Typ okucia:</strong> <span class="editable-content-main">-</span></p>
           <p><strong data-translate="window_weight">Waga okna:</strong> <span class="editable-content-main">-</span></p>
           <p><strong data-translate="production_date">Data produkcji:</strong> <span class="editable-content-main">-</span></p>
-          <!-- <p><strong data-translate="gasket_type">Rodzaj uszczelki:</strong> <span class="editable-content-main">-</span></p>
-          <p><strong data-translate="glass_thickness">Grubość szkła:</strong> <span class="editable-content-main">-</span></p>
-          <p><strong data-translate="frame_reinforcement">Rodzaj zbrojenia ramy:</strong> <span class="editable-content-main">-</span></p> -->
         </div>
       </div>
 
@@ -160,10 +157,10 @@
             <!-- Godziny otwarcia -->
             <h6 class="footer-heading collapsible" data-target="opening_hours"><span data-translate="opening_hours">GODZINY OTWARCIA</span><i class="fa fa-chevron-down arrow-icon"></i></h6>
             <div class="content">
-              <p data-translate="monday_friday" class="footer-text">PONIEDZIAŁEK-PIĄTEK 07:00-17:00</p>
-              <p data-translate="saturday" class="footer-text">SOBOTA 09:00-13:00</p>
-              <p data-translate="sunday" class="footer-text">NIEDZIELA NIECZYNNE</p>
-            </div>
+              <p class="footer-text"><i class="fas fa-door-open mr-3"></i><span data-translate="monday_friday">PONIEDZIAŁEK-PIĄTEK 07:00-17:00</span></p>
+              <p class="footer-text"><i class="fas fa-door-open mr-3"></i><span data-translate="saturday">SOBOTA 09:00-13:00</span></p>
+              <p class="footer-text"><i class="fas fa-door-closed mr-3"></i><span data-translate="sunday">NIEDZIELA NIECZYNNE</span></p>
+          </div>
           </div>
 
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-2">
